freeform-docs/v4/reliability/diagnostics.md
---
title: Craft Freeform 4.x - Diagnostics - Reliability
description: Freeform includes a self-diagnostics page that may help you track down potential issues with your setup, or give to you the ability to easily share diagnostic results with Solspace Support to assist you faster.
prev: false
next: false
---

<meta property="og:image" content="https://docs.solspace.com/extras/social/craft/freeform/freeform.png" />

::: new /craft/freeform/v5/configuration/diagnostics/
Freeform
:::

<div id="pr-heading">
    <img src="https://docs.solspace.com/extras/icons/products/freeform-icon.png" alt="Freeform" class="pr-image">
    <span class="pr-name">Freeform</span>
    <span class="pr-category">for Craft</span>
    <div class="pr-v-wrapper">
        <div class="pr-v">
            <span class="pr-v-v">4.x</span>
            <span class="pr-v-arrow arrow down"></span>
        </div>
        <ul class="pr-v-list">
            <li><a href="/craft/freeform/v5/">5.x<span class="pr-v-type pr-latest">✓ Latest</span></a></li>
            <li><a href="/craft/freeform/v4/">4.x</a></li>
            <li><a href="/craft/freeform/v3/">3.x<span class="pr-v-type pr-retired">Retired</span></a></li>
            <li><a href="/craft/freeform/v2/">2.x<span class="pr-v-type pr-retired">Retired</span></a></li>
            <li><a href="/craft/freeform/v1/">1.x<span class="pr-v-type pr-retired">Retired</span></a></li>
        </ul>
    </div>
    <div class="pr-buy">
        <a href="https://plugins.craftcms.com/freeform" class="button button-blue"><span class="external-url">Plugin Store</span></a>
    </div>
</div>

<span class="page-section"><a href="/craft/freeform/v4/reliability/">Reliability</a></span>

# Diagnostics

Freeform includes a self-diagnostics page that may help you track down potential issues with your setup, or give you the ability to easily share diagnostic results with Solspace Support to assist you faster.

Whenever you're encountering issues with your site, check out this page in your control panel to see if anything is noted. It's also advisable to visit this page during the initial setup of Freeform or updates on your site to ensure you meet all of the requirements and pass all the checks.

When requesting support with Freeform, support staff may ask you to provide a screenshot of this page as well.

::: guide ../../guides/troubleshooting-form-issues/
Quick troubleshooting the most commonly reported issues with your form's appearance, behavior, or submission of the form on the front end.
:::

![Diagnostics](../images/cp_diagnostics.png)